[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Boss1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Boss2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Gui.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/BricksBoss.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Brick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;
render_mode blend_mix;
"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )

[sub_resource type="StreamTexture" id=3]

flags = 4
load_path = "res://.import/wall.jpg-8ed0d7df155526a983718de180132827.stex"

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 423.819, 94.3451 )

[sub_resource type="StreamTexture" id=5]

flags = 4
load_path = "res://.import/wall.jpg-8ed0d7df155526a983718de180132827.stex"

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 315.285, 792.863 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 25.6705, 27.3838 )

[sub_resource type="StreamTexture" id=8]

flags = 4
load_path = "res://.import/top.png-e6ac22684bd8fb5fb9332140beac38f7.stex"

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 193.469, 11.553 )

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )
LifeCount = 3

[node name="Paddle" parent="." index="0" instance=ExtResource( 2 )]

[node name="PaddleStartPosition" type="Position2D" parent="." index="1"]

position = Vector2( 390.48, 542.231 )
_sections_unfolded = [ "Transform" ]

[node name="BallStartPosition" type="Position2D" parent="." index="2"]

position = Vector2( 388.075, 428.347 )
scale = Vector2( 1, 1.03407 )
_sections_unfolded = [ "Transform" ]

[node name="RightBound" type="Area2D" parent="." index="3"]

editor/display_folded = true
material = SubResource( 2 )
position = Vector2( 587.127, 291.591 )
scale = Vector2( 0.214351, 9.39829 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RightBound" index="0"]

modulate = Color( 0.902344, 0.394775, 0.394775, 1 )
position = Vector2( 33.1267, -32.0628 )
scale = Vector2( 2.59327, 63.833 )
texture = SubResource( 3 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBound" index="1"]

position = Vector2( 415.516, 58.0317 )
shape = SubResource( 4 )

[node name="LeftBound" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 214.015, 208.054 )
scale = Vector2( 0.233815, 0.835998 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="LeftBound" index="0"]

position = Vector2( -27.4921, -43.9623 )
rotation = 3.14159
scale = Vector2( 2.0801, -319.661 )
texture = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBound" index="1"]

position = Vector2( -310.207, 769.049 )
scale = Vector2( 1, 1.35241 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="BottomBound" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 366.027, 815.624 )
scale = Vector2( -17.5834, -6.08222 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 7
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBound" index="0"]

position = Vector2( 0, 3.04252 )
scale = Vector2( 1, 1.14006 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Boss1" parent="." index="6" instance=ExtResource( 3 )]

position = Vector2( 100, 100.025 )

[node name="Boss2" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 100.033, 298.872 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="GUI" parent="." index="8" instance=ExtResource( 5 )]

anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 799.0
margin_bottom = 598.0

[node name="TopBound" type="Area2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 400.469, -11.4674 )
scale = Vector2( 6.65625, 1.07914 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TopBound" index="0"]

texture = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBound" index="1"]

shape = SubResource( 9 )

[node name="BricksSecondBoss" parent="." index="10" instance=ExtResource( 6 )]

position = Vector2( 389.604, 303.481 )

[node name="Brick2" parent="BricksSecondBoss" index="0" instance=ExtResource( 7 )]

position = Vector2( 140.456, -2.2713 )
animation = "light"

[node name="Brick3" parent="BricksSecondBoss" index="1" instance=ExtResource( 7 )]

position = Vector2( -116.914, -2.80234 )
animation = "light"

[node name="Brick4" parent="BricksSecondBoss" index="2" instance=ExtResource( 7 )]

position = Vector2( 24.7039, -1.69431 )
animation = "light"

[node name="BricksFirstBoss" parent="." index="11" instance=ExtResource( 6 )]

position = Vector2( 391.654, 309.632 )

[node name="Brick" parent="BricksFirstBoss" index="0" instance=ExtResource( 7 )]

position = Vector2( -127.731, -191.981 )

[node name="Brick2" parent="BricksFirstBoss" index="1" instance=ExtResource( 7 )]

position = Vector2( 12.9854, -191.981 )

[node name="Brick3" parent="BricksFirstBoss" index="2" instance=ExtResource( 7 )]

position = Vector2( 138.775, -191.981 )

[node name="Ball" parent="." index="12" instance=ExtResource( 8 )]

collision_layer = 2
collision_mask = 15
mass = 0.01
bounce = 1.0
angular_velocity = 20.0
paddleSpeedFactor = 1.2

[connection signal="addScorePoints" from="." to="." method="_on_Main_addScorePoints"]

[connection signal="showWin" from="." to="." method="_on_Main_showWin"]

[connection signal="body_entered" from="Paddle" to="." method="_on_Paddle_body_entered"]

[connection signal="body_entered" from="RightBound" to="." method="_on_RightBound_body_entered"]

[connection signal="body_entered" from="LeftBound" to="." method="_on_LeftBound_body_entered"]

[connection signal="body_entered" from="BottomBound" to="." method="_on_BottomBound_body_entered"]

[connection signal="body_entered" from="TopBound" to="." method="_on_TopBound_body_entered"]

[connection signal="dead" from="BricksSecondBoss" to="Boss2" method="_on_BricksSecondBoss_dead"]

[connection signal="hitBoss" from="BricksSecondBoss" to="Boss2" method="_on_BricksSecondBoss_hitBoss"]

[connection signal="dead" from="BricksFirstBoss" to="Boss1" method="_on_BricksFirstBoss_dead"]

[connection signal="hitBoss" from="BricksFirstBoss" to="Boss1" method="_on_BricksFirstBoss_hitBoss"]


